--- a/NextDepartures/Base.lproj/Main.storyboard
+++ b/NextDepartures/Base.lproj/Main.storyboard
@@ -83,7 +83,7 @@
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tram" translatesAutoresizingMaskIntoConstraints="NO" id="e0h-cv-0bD">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="train" translatesAutoresizingMaskIntoConstraints="NO" id="e0h-cv-0bD">
                                                     <rect key="frame" x="8" y="11" width="50" height="50"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="50" id="2yK-Cz-IK5"/>
@@ -106,6 +106,12 @@
                                                 <constraint firstItem="tbQ-BN-pZb" firstAttribute="leading" secondItem="SOp-sP-aQe" secondAttribute="leading" constant="66" id="u4e-Q3-out"/>
                                                 <constraint firstItem="tbQ-BN-pZb" firstAttribute="leading" secondItem="ykR-rV-kCm" secondAttribute="leading" id="vXe-ES-62e"/>
                                             </constraints>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="Uqb-vu-FhI"/>
+                                                    <exclude reference="u4e-Q3-out"/>
+                                                </mask>
+                                            </variation>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="mainTextLabel" destination="ykR-rV-kCm" id="5zy-1I-mcV"/>
@@ -352,6 +358,6 @@
         <image name="refresh" width="24" height="26"/>
         <image name="timetable" width="26" height="21"/>
         <image name="trackingStops" width="10" height="20"/>
-        <image name="tram" width="88" height="120"/>
+        <image name="train" width="96" height="120"/>
     </resources>
 </document>
