--- a/NextDepartures/Base.lproj/Main.storyboard
+++ b/NextDepartures/Base.lproj/Main.storyboard
@@ -25,11 +25,11 @@
         </mutableArray>
     </customFonts>
     <scenes>
-        <!--Map-->
+        <!--Around-->
         <scene sceneID="CyL-Nb-ddV">
             <objects>
                 <navigationController id="hAo-vc-f1j" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Map" image="timetable" id="i8Z-s5-oIx"/>
+                    <tabBarItem key="tabBarItem" title="Around" image="Arounds_NonSelected" selectedImage="Arounds_Selected" id="i8Z-s5-oIx"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="ZX0-as-WsP">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -196,7 +196,6 @@
                             </mask>
                         </variation>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Map" image="timetable" id="acW-dT-cKf"/>
                     <navigationItem key="navigationItem" title="Next Departures" id="d2S-hO-8uL">
                         <barButtonItem key="backBarButtonItem" title="Back" id="jmQ-gQ-Je7"/>
                         <barButtonItem key="rightBarButtonItem" image="refresh" id="25b-Yb-5dW">
@@ -219,7 +218,11 @@
         <scene sceneID="dUM-Sw-yDE">
             <objects>
                 <navigationController id="Sc4-Bn-Lex" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Tracking" image="trackingStops" id="4y7-sO-0M0"/>
+                    <tabBarItem key="tabBarItem" title="Tracking" image="Tracking_NonSelected" selectedImage="Tracking_Selected" id="4y7-sO-0M0">
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="image" keyPath="selectedImage" value="Tracking_Selected"/>
+                        </userDefinedRuntimeAttributes>
+                    </tabBarItem>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="WJR-zT-FEB">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -364,7 +367,6 @@
                             <constraint firstItem="Djb-ko-YwX" firstAttribute="top" secondItem="zRf-mL-8Mc" secondAttribute="bottom" constant="-49" id="zln-om-i7D"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Tracking" image="trackingStops" id="cPa-gy-q4n"/>
                     <navigationItem key="navigationItem" title="Tracking Stops" id="rGO-Tf-5zq"/>
                     <connections>
                         <outlet property="trackingTableView" destination="zRf-mL-8Mc" id="0TG-L8-oag"/>
@@ -435,7 +437,6 @@
                             <constraint firstAttribute="centerX" secondItem="hKU-83-xT0" secondAttribute="centerX" constant="0.5" id="sbb-AA-nvz"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Map" image="timetable" id="zUa-js-wbP"/>
                     <navigationItem key="navigationItem" title="Service Details" id="pbb-oC-WSb"/>
                     <connections>
                         <outlet property="activityIndicator" destination="hKU-83-xT0" id="Vj5-Tu-NnS"/>
@@ -554,10 +555,12 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Arounds_NonSelected" width="25" height="24"/>
+        <image name="Arounds_Selected" width="25" height="24"/>
+        <image name="Tracking_NonSelected" width="19" height="25"/>
+        <image name="Tracking_Selected" width="19" height="25"/>
         <image name="location" width="24" height="24"/>
         <image name="refresh" width="24" height="26"/>
-        <image name="timetable" width="26" height="21"/>
-        <image name="trackingStops" width="10" height="20"/>
         <image name="train" width="96" height="120"/>
     </resources>
 </document>
